# Absokino

./: .gitignore  CMakeLists.txt  README.md
qml/: Main.qml
qml/components/: AdvancedMenu.qml  AudioPopup.qml  ChaptersMenu.qml  ControlBar.qml  LibraryDrawer.qml  SeekBar.qml  StatusBar.qml  SubtitlePopup.qml  VideoArea.qml  VolumeSlider.qml
qml/dialogs/: DiagnosticsDialog.qml  SettingsDialog.qml
scripts/: build.sh  run.sh
src/: chaptermodel.cpp  chaptermodel.h  hdrdiagnostics.cpp  hdrdiagnostics.h  main.cpp  mpvobject.cpp  mpvobject.h  mpvrenderer.cpp  mpvrenderer.h  playercontroller.cpp  playercontroller.h  recentfilesmodel.cpp  recentfilesmodel.h  settingsmanager.cpp  settingsmanager.h  trackmodel.cpp  trackmodel.h
